<resources>
    <string name="app_name">Easy-Eat-Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke_fragment">Extras</string>

    <string name="recipes_fragment_appbar_text">Recipes</string>
    <string name="favorite_recipes_fragment_appbar_text">Favorite Recipes</string>
    <string name="food_joke_fragment_appbar_text">Extras</string>
    <string name="to_do_search">To do search</string>
    <string name="error_message_display_image">Error message display image</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="recipe_s_image">Recipe\'s Image</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_100">100</string>
    <string name="vegan">Vegan</string>
</resources>