<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.gabriel.easy_eat_recipe.fragment.recipe_fragment.RecipesFragment"
        android:label="@string/recipes_fragment_appbar_text"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="com.gabriel.easy_eat_recipe.fragment.favorite_recipes_fragment.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes_fragment_appbar_text"
        tools:layout="@layout/fragment_favorite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.gabriel.easy_eat_recipe.fragment.food_joke_fragment.FoodJokeFragment"
        android:label="@string/food_joke_fragment_appbar_text"
        tools:layout="@layout/fragment_food_joke" />
</navigation>